clasificacion de pestañas admin
en rutamiento de botones admin con seleccion de consulta

--- a/src/scss/base/_cajas.scss
+++ b/src/scss/base/_cajas.scss
@@ -120,9 +120,24 @@
     font-weight: 700;
     text-decoration: none;
     display:flex;
-    justify-content: center;     padding: auto;
+    justify-content: center;     
+    padding: auto;
     margin: auto;
+    max-width: 700px;
+    margin-top: 10px;
     
     }
+
+//BOTON ELIMINAR AREA DE ADMIN
+
+.boton-rojo-block {
+    background-color: v.$rojo;
+    border-radius: 5px;
+}
+
+.boton-green-block {
+    background-color: v.$button-hover-color;
+    border-radius: 2px;
+}
 
 
