--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -10,7 +10,7 @@ $lead: rgb(56, 91, 86); //LEAD ES COLOR PLOMO
 $tex-white: hsl(0, 0%,100%);
 $text-light-gray:hsl(0,0%,90%);
 $color-boton: rgb(0, 49, 77);
-$glass-bg-color: hsl(0, 0%, 100%, 0.05);
+$glass-bg-color: hsl(0, 0%, 100%, 0.05);//es un transluz 
 $border-color:  hsl(0, 0%,100%,0.25);
 $blur: blur(30px);
 $crema:  rgb(251, 251, 226);
