Creacion perfil admin y solucion error
cree el perfil de admin pasando por un registro y login, solucione un error de menaje, falta dar funionaladad y conectar varios botones todo good

--- a/src/scss/base/_hover.scss
+++ b/src/scss/base/_hover.scss
@@ -118,6 +118,13 @@ body::after {
 
 .admi-text{
     text-align: center;
+    color: v.$green;
+    font-weight: bold;
+}
+.admi-text-home{
+    text-align: center;
+    color: v.$tex-white;
+    font-weight: bold;
 }
 
 
