--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -17,6 +17,7 @@ $crema:  rgb(251, 251, 226);
 $button-hover-color:hsla(0, 0%, 0%,0.3);
 $gris:hsl(0, 0%, 52%);
 $rojo:rgb(220, 3, 3);
+$negro:rgb(0, 0, 0);
 
 //TAMAÑOS DE PANTALLA MEDIA QUERIES
 
