--- a/src/scss/base/_burbujas.scss
+++ b/src/scss/base/_burbujas.scss
@@ -5,6 +5,7 @@
     border-radius: 50%;
     background:v.$tex-white;
     opacity: .3;
+    z-index: -1;
 
     position: absolute;
     bottom: -150;
@@ -16,6 +17,7 @@
     left: 5%;
     animation-duration: 3s; 
     animation-delay: 3s;
+    z-index: -1;
 }
 .burbuja:nth-child(2){
     width: 100px;
@@ -23,6 +25,7 @@
     left: 35%;
     animation-duration: 3s;
     animation-delay: 5s; 
+    z-index: -1;
 }
 .burbuja:nth-child(3){
     width: 20px;
@@ -30,6 +33,7 @@
     left: 15%;
     animation-duration: 1.5s; 
     animation-delay: 7s;
+    z-index: -1;
 }
 .burbuja:nth-child(4){
     width: 50px;
@@ -37,6 +41,7 @@
     left: 90%;
     animation-duration: 6s;
     animation-delay: 3s; 
+    z-index: -1;
 }
 .burbuja:nth-child(5){
     width: 70px;
@@ -44,6 +49,7 @@
     left: 65%;
     animation-duration: 3s; 
     animation-delay: 1s;
+    z-index: -1;
 }
 .burbuja:nth-child(6){
     width: 20px;
@@ -51,6 +57,7 @@
     left: 50%;
     animation-duration: 4s;
     animation-delay: 5s; 
+    z-index: -1;
 }
 .burbuja:nth-child(7){
     width: 20px;
@@ -58,6 +65,7 @@
     left: 50%;
     animation-duration: 4s; 
     animation-delay: 5s;
+    z-index: -1;
 }
 .burbuja:nth-child(8){
     width: 100px;
@@ -65,6 +73,7 @@
     left: 52%;
     animation-duration: 5s;
     animation-delay: 5s; 
+    z-index: -1;
 }
 .burbuja:nth-child(9){
     width: 65px;
@@ -72,6 +81,7 @@
     left: 51%;
     animation-duration: 3s; 
     animation-delay: 2s;
+    z-index: -1;
 }
 .burbuja:nth-child(10){
     width: 40px;
@@ -79,6 +89,7 @@
     left: 35%;
     animation-duration: 3s;
     animation-delay: 4s; 
+    z-index: -1;
 }
 .burbuja:nth-child(11){
     width: 20px;
@@ -86,6 +97,7 @@
     left: 90%;
     animation-duration: 1.5s; 
     animation-delay: 7s;
+    z-index: -1;
 }
 .burbuja:nth-child(12){
     width: 20px;
@@ -93,6 +105,7 @@
     left: 80%;
     animation-duration: 3.5s; 
     animation-delay: 7s;
+    z-index: -1;
 }
 .burbuja:nth-child(13){
     width: 40px;
@@ -100,6 +113,7 @@
     left: 70%;
     animation-duration: 6.5s;
     animation-delay: 4s; 
+    z-index: -1;
 }
 .burbuja:nth-child(14){
     width: 50px;
@@ -107,6 +121,7 @@
     left: 20%;
     animation-duration: 5s; 
     animation-delay: 7s;
+    z-index: -1;
 }
 .burbuja:nth-child(15){
     width: 80px;
@@ -114,6 +129,7 @@
     left: 25%;
     animation-duration: 6.5s; 
     animation-delay: 2s;
+    z-index: -1;
 }
 
 
