--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -14,6 +14,7 @@ body{
     display: flex; //todo se desordena 
     flex-direction: column; //todo se organiza
     min-height: 100vh; //inidica que todo el body sea completo de la pagina
+
     
     color: v.$text-light-gray;
     font-family: 'Poppins', sans-serif;
@@ -21,8 +22,6 @@ body{
     font-size: 16px;
     line-height: 1.5;
     overflow: hidden;
-   
-  
 }
 
 /*margen de la parte superior con el primer menu o logo*/
@@ -30,8 +29,6 @@ header {
     width: 100%;
     height: 100%;
     display: block;
-    
-
     // /*position: fixed;*/
-    // /* z-index: 1;  es para que se muestre encima de las cosas */
+    //  z-index: 1;  /*es para que se muestre encima de las cosas */
 }
