POO 387 Creacion tabla programas
se crea la estructura para mostrar programas en el archivo consultar, falta trabajar en la parte acturalizar de programas y tiposidentificacion

--- a/src/scss/base/_globales.scss
+++ b/src/scss/base/_globales.scss
@@ -44,7 +44,7 @@ html{
         padding: 5;
     }
 }
-#tablaH{
+#tablaPrograma{
     width:auto;
     background-color:transparent;
     border: 10px solid v.$border-color;
