--- a/src/scss/base/_cajas.scss
+++ b/src/scss/base/_cajas.scss
@@ -125,9 +125,6 @@
     margin: auto;
     max-width: 700px;
     margin-top: 10px;
-
-    
-    
     }
 
 //BOTON ELIMINAR AREA DE ADMIN
@@ -175,6 +172,9 @@
     border-radius: 5px;
     width: 80%;
     display: flex;
+    align-items: center;
+    color: v.$tex-white;
+    text-decoration: none;
 }
 
 .boton-green-block{
