--- a/src/scss/base/_hover.scss
+++ b/src/scss/base/_hover.scss
@@ -88,9 +88,10 @@ body::after {
     border-radius: 50%;
     padding: 10px 5px;
     text-align: center;
-
+    
+    margin-top: 10px;
     height: 45px;
-    width: 30%;
+    width: 70%;
     font-size: 16px;
     font-weight: 500;
     cursor: pointer;
