POO ofertas crear formulario
Trabajando en ofertas y creando el formulario para crear una oferta laboral se esta poniendo el filtro de control y confirmacion para subir a la base de datos falta seguir trabajando en este

--- a/src/scss/base/_globales.scss
+++ b/src/scss/base/_globales.scss
@@ -116,6 +116,14 @@ html{
     opacity: 1;
 } 
 
+
+// diseño formulario crear ofertas
+
+.formulario-oferta fieldset {
+    border-color: v.$crema;
+    border: 5px solid v.$border-color;
+}
+
 .cuadro .input-control {
     display: block;
     height: 45px;
