POO 369 crear oferta falta img
trabaje en formularios creacion empresas y formulario creacion oferta tengo error en la subida de imagenes, estoy trbajando en ello continuar

--- a/src/scss/base/_burbujas.scss
+++ b/src/scss/base/_burbujas.scss
@@ -1,12 +1,17 @@
 @use 'base/variables' as v;
 
 /*burbujas*/
+// .burbujas{
+//     margin-bottom: 0;
+// }
+
 .burbuja{
+    
     border-radius: 50%;
     background:v.$tex-white;
     opacity: .3;
     z-index: -1;
-
+    
     position: absolute;
     bottom: -150;
     animation: burbujas 3s linear infinite;
