--- a/src/scss/internas/_admin.scss
+++ b/src/scss/internas/_admin.scss
@@ -49,23 +49,31 @@ table.aprendiz {
 
     thead{
         background-color: v.$gris;
-
     }
     th { //parte gris de la tabla de consulta
         color: v.$tex-white;
-        padding: 5px;
-        
+        padding: 5px;       
     }
     td{
         padding: 5px;
-
         a{
             color: v.$tex-white;
             text-decoration: none;
             display: flex;
             justify-content: center;
         }
-    
+    }   
+    .imagen-tabla{
+        width: 5rem;
+        border-radius: 15%;
+        padding: 0;
+        margin: 0; 
     }
 
 }
+
+
+
+
+
+
